refactor: replace sysout with logger in observers and define constants for default users in SchedulingService